--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "email": "srdjan.boskovic@sap.com"
   },
   "engines": {
-    "node": "~12 >=12.17 || >= 14.0"
+    "node": ">=14.0.0"
   },
   "cpu": [
     "!arm"
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "dependencies": "npm install --save bluebird node-addon-api prebuild-install",
-    "devDependencies": "npm install --save-dev cmake-js typescript async decimal.js eslint jest prebuild prebuild-install random-bytes @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
+    "devDependencies": "npm install --save-dev cmake-js commitizen cz-conventional-changelog decimal.js ts-node typescript async decimal.js eslint jest prebuild random-bytes @tsconfig/node16 @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
     "prepublishOnly": "npm ls --depth=0",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install -r napi || cmake-js rebuild",
@@ -31,7 +31,7 @@
   },
   "binary": {
     "napi_versions": [
-      6
+      5
     ],
     "module_name": "sapnwrfc",
     "module_path": "./lib/binding/",
@@ -60,28 +60,28 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@tsconfig/node16": "^1.0.2",
+    "@babel/core": "^7.18.5",
+    "@tsconfig/node16": "^1.0.3",
     "@types/bluebird": "^3.5.36",
-    "@types/node": "^16.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "async": "^3.2.0",
-    "cmake-js": "^6.3.0",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "async": "^3.2.4",
+    "cmake-js": "^6.3.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "decimal.js": "^10.3.1",
-    "eslint": "^7.30.0",
-    "jest": "^27.0.6",
-    "prebuild": "^10.0.1",
+    "eslint": "^8.18.0",
+    "jest": "^28.1.1",
+    "prebuild": "^11.0.3",
     "random-bytes": "^1.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.3.5"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
-    "node-addon-api": "^4.3.0",
-    "prebuild-install": "^7.0.1"
+    "node-addon-api": "^5.0.0",
+    "prebuild-install": "^7.1.1"
   },
   "config": {
     "commitizen": {
