build(cmake): version update and c++ standard version update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # cmake standard
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.25)
 cmake_policy(SET CMP0042 NEW)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # verbose
@@ -107,7 +107,7 @@ endif(MSVC)
 #
 # build
 #
-message("N-API version: ${NAPI_VERSION}   ${NODE_HEADERS_INCLUDE_DIR}")
+message("N-API version: ${NAPI_VERSION} ${NODE_HEADERS_INCLUDE_DIR}")
 
 # All platforms
 
@@ -127,7 +127,7 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
     execute_process(COMMAND bash ${CMAKE_CURRENT_SOURCE_DIR}/ci/utils/nwrfcsdk-version-linux.sh OUTPUT_VARIABLE SAPNWRFCSDK_VERSION)
     message("SAP NWRFC SDK: " ${SAPNWRFCSDK_VERSION})
 
-    target_compile_options(${PROJECT_NAME} PUBLIC -std=c++11 -Wall)
+    target_compile_options(${PROJECT_NAME} PUBLIC -std=c++17 -Wall)
 
     add_compile_definitions(
         SAPonLIN
@@ -143,14 +143,15 @@ elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
 
     # https://docs.microsoft.com/en-us/cpp/build/reference/compiler-options-listed-alphabetically
     target_compile_options(${PROJECT_NAME} PUBLIC
-        -EHs
-        -Gy
-        -J
-        -MD
-        -nologo
-        -W3
-        -Z7
-        -GL -O2 -Oy-
+        /EHs
+        /Gy
+        /J
+        /MD
+        /nologo
+        /W3
+        /Z7
+        /GL /O2 /Oy-
+        /std:c++17
         /we4552 /we4700 /we4789
     )
 
@@ -203,7 +204,7 @@ elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
         OUTPUT_VARIABLE SAPNWRFCSDK_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
     message("SAP NWRFC SDK: " ${SAPNWRFCSDK_VERSION})
 
-    target_compile_options(${PROJECT_NAME} PUBLIC -stdlib=libc++ -std=c++0x -Wall -mmacosx-version-min=10.10 -fvisibility=hidden)
+    target_compile_options(${PROJECT_NAME} PUBLIC -stdlib=libc++ -std=c++17 -Wall -mmacosx-version-min=10.10 -fvisibility=hidden)
 
     add_compile_definitions(
         SAPonDARW
