--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "scripts": {
     "addon": "prebuild --backend cmake-js -r napi --force --strip --verbose",
-    "devDpd": "npm install --save-dev cmake-js commitizen cz-conventional-changelog ts-node typescript async decimal.js eslint jest prebuild random-bytes @tsconfig/node16 @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
+    "devDpd": "npm install --save-dev cmake-js cz-conventional-changelog ts-node typescript async decimal.js eslint jest prebuild random-bytes @tsconfig/node16 @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
     "dpd": "npm install --save bluebird node-addon-api prebuild-install",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install -r napi || cmake-js rebuild",
@@ -60,27 +60,26 @@
   },
   "dependencies": {
     "bluebird": "^3.7.2",
-    "node-addon-api": "^5.1.0",
+    "node-addon-api": "^6.0.0",
     "prebuild-install": "^7.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
+    "@babel/core": "^7.21.3",
     "@tsconfig/node16": "^1.0.3",
-    "@types/bluebird": "^3.5.36",
-    "@types/node": "^18.6.2",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@types/bluebird": "^3.5.38",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "async": "^3.2.4",
-    "cmake-js": "^6.3.2",
-    "commitizen": "^4.2.5",
+    "cmake-js": "^7.2.1",
     "cz-conventional-changelog": "^3.3.0",
-    "decimal.js": "^10.3.1",
-    "eslint": "^8.20.0",
-    "jest": "^28.1.3",
+    "decimal.js": "^10.4.3",
+    "eslint": "^8.37.0",
+    "jest": "^29.5.0",
     "prebuild": "^11.0.4",
     "random-bytes": "^1.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.2"
   },
   "engines": {
     "node": ">=14.17.0"
