refactor(wrapper): ts linting

--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "addon": "prebuild --backend cmake-js -r napi --force --strip --verbose",
     "devDpd": "npm install --save-dev cmake-js cz-conventional-changelog ts-node typescript async decimal.js eslint jest prebuild random-bytes @tsconfig/node16 @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
     "dpd": "npm install --save bluebird node-addon-api prebuild-install",
-    "lintcpp": "cppcheck --enable=all --inline-suppr src/cpp",
+    "lintcpp": "cppcheck -I node_modules/node-addon_api --enable=all --inline-suppr src/cpp",
+    "lintts": "eslint src/ts/wrapper --ext ts",
+    "lint": "npm run lintts && npm run lintcpp",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install -r napi || cmake-js rebuild",
     "jest": "jest --testPathIgnorePatterns throughput --testTimeout 30000",
