feat: decimal data type added

--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "addon": "prebuild --backend cmake-js -r napi --force --strip --verbose",
     "devDpd": "npm install --save-dev cmake-js cz-conventional-changelog ts-node typescript async decimal.js eslint jest prebuild random-bytes @tsconfig/node16 @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
     "dpd": "npm install --save bluebird node-addon-api prebuild-install",
-    "lintcpp": "cppcheck -I node_modules/node-addon_api --enable=all --inline-suppr src/cpp",
-    "lintts": "eslint src/ts/wrapper --ext ts",
-    "lint": "npm run lintts && npm run lintcpp",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install -r napi || cmake-js rebuild",
     "jest": "jest --testPathIgnorePatterns throughput --testTimeout 30000",
+    "lint": "npm run lintts && npm run lintcpp",
+    "lintcpp": "cppcheck -I node_modules/node-addon_api --enable=all --inline-suppr src/cpp",
+    "lintts": "eslint src/ts/wrapper --ext ts",
     "prepublishOnly": "npm ls --depth=0",
     "test": "npm audit --omit=dev && reuse lint && jest --testPathIgnorePatterns throughput --testTimeout 30000",
     "ts": "tsc -p src/ts",
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "bluebird": "^3.7.2",
+    "decimal.js": "^10.4.3",
     "node-addon-api": "^6.0.0",
     "prebuild-install": "^7.1.1"
   },
@@ -70,18 +71,18 @@
     "@babel/core": "^7.21.3",
     "@tsconfig/node16": "^1.0.3",
     "@types/bluebird": "^3.5.38",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "async": "^3.2.4",
     "cmake-js": "^7.2.1",
     "cz-conventional-changelog": "^3.3.0",
-    "decimal.js": "^10.4.3",
     "eslint": "^8.37.0",
     "jest": "^29.5.0",
     "prebuild": "^11.0.4",
     "random-bytes": "^1.0.0",
-    "ts-node": "^10.9.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.2"
   },
   "engines": {
