--- a/src/ts/tsconfig.json
+++ b/src/ts/tsconfig.json
@@ -11,7 +11,8 @@
     "removeComments": true,
     "listFiles": true,
     "allowSyntheticDefaultImports": true
-
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
