test: unit tests ported to typescript

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,7 +203,7 @@ elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
         OUTPUT_VARIABLE SAPNWRFCSDK_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
     message("SAP NWRFC SDK: " ${SAPNWRFCSDK_VERSION})
 
-    target_compile_options(${PROJECT_NAME} PUBLIC -stdlib=libc++ -std=c++17 -Wall -mmacosx-version-min=10.10 -fvisibility=hidden)
+    target_compile_options(${PROJECT_NAME} PUBLIC  -pedantic-errors -stdlib=libc++ -std=c++17 -Wall -mmacosx-version-min=10.10 -fvisibility=hidden)
 
     add_compile_definitions(
         SAPonDARW
