--- a/.editorconfig
+++ b/.editorconfig
@@ -6,15 +6,19 @@ root = true
 # Unix-style newlines with a newline ending every file
 [*]
 end_of_line = lf
-insert_final_newline = true
-
-# utf-8
 charset = utf-8
-
-# trim trailing whitespace
 trim_trailing_whitespace = true
-
+insert_final_newline = true
 indent_style = space
+
+
+[*.{gyp,gypi}]
+indent_size = 4
+
+[src/**.{h,cc}]
+indent_size = 2
+
+[src/**.ts]
 indent_size = 4
 
 [*.json]
