--- a/.editorconfig
+++ b/.editorconfig
@@ -11,14 +11,13 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 
-
 [*.{gyp,gypi}]
 indent_size = 4
 
 [src/**.{h,cc}]
 indent_size = 2
 
-[src/**.ts]
+[{src,test}/**.ts]
 indent_size = 4
 
 [*.json]
