feat: electron support

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lintcpp": "cppcheck -I node_modules/node-addon_api --enable=all --inline-suppr src/cpp",
     "lintts": "eslint src/ts test --ext ts",
     "test": "jest --testPathIgnorePatterns throughput --testTimeout 30000",
-    "cpp": "prebuildify --napi -t 16.20.0 --force --strip --verbose",
+    "cpp": "prebuildify --napi -t 16.20.0 -t electron@25.2.0 --force --strip --verbose",
     "ts": "tsc",
     "build": "npm run ts && npm run cpp",
     "rebuild": "npm install --build-from-source"
