--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-rfc",
-  "version": "3.0.0-rc.2",
+  "version": "3.0.0",
   "description": "nodejs bindings for SAP NW RFC SDK",
   "keywords": [
     "sap",
