--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "typescript": "^5.0.2"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "^16 || ^18 || >= 20"
   },
   "gypfile": true
 }
